samples/_failures_safe/1761552194_e0a93c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf9a5a76.c: In function ‘main’:
./samples/SAFE/__tmp_cf9a5a76.c:152:9: error: expected declaration or statement at end of input
  152 |         printf("5. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_cf9a5a76.c:152:9: error: expected declaration or statement at end of input
